fix for size of icons on mobile devices

--- a/css/less/mobile.less
+++ b/css/less/mobile.less
@@ -4,9 +4,9 @@ html.responsive{
     }
     body{
         font-size: 80%;
-        i{
-            font-size: 14px;
-        }
+    }
+    i{
+        font-size: @fontSize;
     }
     nav a{
         display: none;
